@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    - Make 'no_critic' work as advertised
+
 0.040     2013-02-13 09:32:02 America/New_York
 
     - Add 'no_git' option to bypass git-related plugins
